--- a/src/main/resources/static/css/typography.css
+++ b/src/main/resources/static/css/typography.css
@@ -36,3 +36,19 @@ li {
 div.active a {
     color: #6ed2f0;
 }
+
+.poppins-semibold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+body {
+    background-color: whitesmoke;
+    font-family: "Poppins", sans-serif;
+}
+
+.welcome-heading {
+    text-align: center;
+    margin-top: 90px;
+}
